--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
     <div>This is going to be a center container. It will go till a given width and center content</div>
     <hr>
 
+    <h2>@Links</h2>
+    <a href="/">Primary Link</a>
+    <a href="/">Secondary Link</a>
+    <hr>
+
+    
+
+
+
 
 
 
