--- a/index.html
+++ b/index.html
@@ -32,12 +32,73 @@
     <a href="/">Secondary Link</a>
     <hr>
 
-    
+    <h2>@Lists</h2>
+    <h3>Here's My List using ul & li(Unordered List)</h3>
+    <ul>
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>Item Three</li>
+    </ul>
+    <h3>Inline List</h3>
+    <p> Instead of going into new row we will create a list which will take all items into same row.</p>
+    <ul>
+        <li>Inline Item One</li>
+        <li>Inline Item Two</li>
+        <li>Inline Item Three</li>
+    </ul>
+    <h3>Reverse Ordered Lists</h3>
+    <p>This list will count items in reverse</p>
+    <ol reverse>
+        <li>First Item</li>
+        <li>Second Item</li>
+        <li>Third Item</li>
+    </ol>
+    <hr>
 
+    <h2>@Nav</h2>
+    <p>I Am Brand</p>
+    <ul>
+        <li> <a href ="/" >Home</a></li>
+        <li><a href ="/" >Products</a></li>
+        <li><a href ="/" >About</a></li>
+    </ul>
+    <hr>
 
-
-
-
+    <h2>@Header</h2>
+    <header>    
+        <img src = "images/resume.svg" />
+        <h1>This is heading under Hero img</h1>
+    </header>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- //#FF6366 -->
