Update: Section Footer

--- a/index.html
+++ b/index.html
@@ -69,6 +69,27 @@
         <img src = "images/resume.svg" />
         <h1>This is heading under Hero img</h1>
     </header>
+    <hr>
+
+    <h2>@Section</h2>
+    <p>A section is used to separate parts of pages. In marketing websites you would have seen a header followed by sections of features, team, pricing, contact info etc.</p>
+    <section>
+        <h3>White Section</h3>
+        <p> This will have white background</p>
+        <h3>Off-White Section</h3>
+        <p>This will have gray background</p>
+    </section>
+    <hr>
+
+    <h3>@Footer</h3>
+    <p>Header Inside Footer</p>
+    <ul>
+        <li>SocialSiteOne</li>
+        <li>SocialSiteTwo</li>
+        <li>SocialSiteThree</li>
+    </ul>
+
+    
 
 </body>
 </html>
