--- a/index.html
+++ b/index.html
@@ -1,85 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Component-Lib-Home</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Component Library Home</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
+
 <body>
     <h1>HTML Component Library by Kushagra</h1>
-    <p> <strong>Kushagradheer Srivastava </strong>is beginer level Student of neog camp and is learning web development from Neog camp</p>
-    <p>This is component Library created by Kushagra to design each element in a better way</p>
-    <p>After creating this website I'll be using this component Library in my <strong>portfolio website ,blog and all projects created.</strong>This will ensure that all her projects have consistent themeing and styling</p>
-    <hr>
+    <p>
+        <strong>Kushagradheer Srivastava </strong>is beginer level Student of neog
+        camp and is learning web development from Neog camp
+    </p>
+    <p>
+        This is component Library created by Kushagra to design each element in a
+        better way
+    </p>
+    <p>
+        After creating this website I'll be using this component Library in my
+        <strong>portfolio website ,blog and all projects created.</strong>This
+        will ensure that all her projects have consistent themeing and styling
+    </p>
+    <hr />
 
     <h2>@Typography</h2>
     <h1>This is biggest Heading h1 in HTMl</h1>
     <h2>This is secong largest heading size in HTML h2</h2>
-    <p> Paragraph 'p' is used for writing desc or details and will autofold itself according to width</p>
+    <p>
+        Paragraph 'p' is used for writing desc or details and will autofold itself
+        according to width
+    </p>
     <small>Small tag is used for relatively smaller text</small>
-    <hr>
+    <hr />
 
     <h2>@Containers</h2>
     <h3>@Fluid Containers</h3>
-    <div>This is going to be fluid container. It will go full width of page .With some margin</div>
+    <div class="container fluid-container">
+        This is going to be fluid container. It will go full width of page .With
+        some margin
+    </div>
     <h3>@Center Container</h3>
-    <div>This is going to be a center container. It will go till a given width and center content</div>
-    <hr>
+    <div class="container  center-container">
+        This is going to be a center container. It will go till a given width
+        and center content
+    </div>
+    <hr />
 
-    <h2>@Links</h2>
-    <a href="/">Primary Link</a>
-    <a href="/">Secondary Link</a>
-    <hr>
+    <h2 class="link">@Links</h2>
+    <a class="link link-primary" href="/">Primary Link</a>
+    <a class="link link-secondary" href="/">Secondary Link</a>
+    <hr />
 
-    <h2>@Lists</h2>
+    <h2 class="list">@Lists</h2>
     <h3>Here's My List using ul & li(Unordered List)</h3>
     <ul>
-        <li>Item One</li>
-        <li>Item Two</li>
-        <li>Item Three</li>
+        <li class="list-non-bullet">Item One</li>
+        <li class="list-non-bullet">Item Two</li>
+        <li class="list-non-bullet">Item Three</li>
     </ul>
     <h3>Inline List</h3>
-    <p> Instead of going into new row we will create a list which will take all items into same row.</p>
+    <p>
+        Instead of going into new row we will create a list which will take all
+        items into same row.
+    </p>
     <ul>
-        <li>Inline Item One</li>
-        <li>Inline Item Two</li>
-        <li>Inline Item Three</li>
+        <li class="list-inline">Inline Item One</li>
+        <li class="list-inline">Inline Item Two</li>
+        <li class="list-inline">Inline Item Three</li>
     </ul>
     <h3>Reverse Ordered Lists</h3>
     <p>This list will count items in reverse</p>
-    <ol reverse>
+    <ol reversed>
         <li>First Item</li>
         <li>Second Item</li>
         <li>Third Item</li>
     </ol>
-    <hr>
+    <hr />
 
     <h2>@Nav</h2>
-    <p>I Am Brand</p>
-    <ul>
-        <li> <a href ="/" >Home</a></li>
-        <li><a href ="/" >Products</a></li>
-        <li><a href ="/" >About</a></li>
-    </ul>
-    <hr>
+    <div class="nav">
+        <p class="nav-brand">I Am Brand-Name</p>
+        <ul class="  nav-pills list-non-bullet">
+            <li class="list-inline "><a class="nav-link-active" href="/">Home</a></li>
+            <li class=" list-inline "><a class="nav-link" href="/">Products</a></li>
+            <li class="list-inline "><a class="nav-link" href="/">About</a></li>
+        </ul>
+    </div>
+    <hr />
 
     <h2>@Header</h2>
-    <header>    
-        <img src = "images/resume.svg" />
+    <header>
+        <img src="images/resume.svg" />
         <h1>This is heading under Hero img</h1>
     </header>
-    <hr>
+    <hr />
 
     <h2>@Section</h2>
-    <p>A section is used to separate parts of pages. In marketing websites you would have seen a header followed by sections of features, team, pricing, contact info etc.</p>
+    <p>
+        A section is used to separate parts of pages. In marketing websites you
+        would have seen a header followed by sections of features, team, pricing,
+        contact info etc.
+    </p>
     <section>
         <h3>White Section</h3>
-        <p> This will have white background</p>
+        <p>This will have white background</p>
         <h3>Off-White Section</h3>
         <p>This will have gray background</p>
     </section>
-    <hr>
+    <hr />
 
     <h3>@Footer</h3>
     <p>Header Inside Footer</p>
@@ -88,38 +119,6 @@
         <li>SocialSiteTwo</li>
         <li>SocialSiteThree</li>
     </ul>
-
-    
-
 </body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- //#FF6366 -->
