Added other components

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     <hr />
 
     <h2>@Header</h2>
-    <header>
-        <img src="images/resume.svg" />
-        <h1>This is heading under Hero img</h1>
+    <header class="hero">
+        <img class="hero-img" src="images/resume.svg" />
+        <h1 class="hero-heading center-container">Kushagra the <span class="hero-span">Web Developer</span></h1>
     </header>
     <hr />
 
@@ -104,21 +104,27 @@
         would have seen a header followed by sections of features, team, pricing,
         contact info etc.
     </p>
-    <section>
-        <h3>White Section</h3>
+    <section class="sections">
+        <h1>White Section</h1>
         <p>This will have white background</p>
-        <h3>Off-White Section</h3>
-        <p>This will have gray background</p>
+        <h1 class="sections-offwhite">Off-White Section</h1>
+        <p>This will have light blue background</p>
     </section>
     <hr />
 
     <h3>@Footer</h3>
-    <p>Header Inside Footer</p>
-    <ul>
-        <li>SocialSiteOne</li>
-        <li>SocialSiteTwo</li>
-        <li>SocialSiteThree</li>
-    </ul>
+    <div class="footer">
+        <p class="footer-heading">Header Inside Footer</p>
+        <ul class=" list-non-bullet">
+
+            <li class="list-inline"><a class="footer-text" href="/">SocialSiteOne</a></li>
+
+            <li class="list-inline"><a class="footer-text" href="/">SocialSiteTwo</a></li>
+
+            <li class="list-inline"><a class="footer-text" href="/">SocialSiteThree</a></li>
+    </div>
+
+    <hr>
 </body>
 
 </html>
