--- a/index.html
+++ b/index.html
@@ -1,130 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Component Library Home</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>home | Kushagra Profile</title>
     <link href="style.css" rel="stylesheet" />
+
 </head>
-
 <body>
-    <h1>HTML Component Library by Kushagra</h1>
-    <p>
-        <strong>Kushagradheer Srivastava </strong>is beginer level Student of neog
-        camp and is learning web development from Neog camp
-    </p>
-    <p>
-        This is component Library created by Kushagra to design each element in a
-        better way
-    </p>
-    <p>
-        After creating this website I'll be using this component Library in my
-        <strong>portfolio website ,blog and all projects created.</strong>This
-        will ensure that all her projects have consistent themeing and styling
-    </p>
-    <hr />
 
-    <h2>@Typography</h2>
-    <h1>This is biggest Heading h1 in HTMl</h1>
-    <h2>This is secong largest heading size in HTML h2</h2>
-    <p>
-        Paragraph 'p' is used for writing desc or details and will autofold itself
-        according to width
-    </p>
-    <small>Small tag is used for relatively smaller text</small>
-    <hr />
-
-    <h2>@Containers</h2>
-    <h3>@Fluid Containers</h3>
-    <div class="container fluid-container">
-        This is going to be fluid container. It will go full width of page .With
-        some margin
-    </div>
-    <h3>@Center Container</h3>
-    <div class="container  center-container">
-        This is going to be a center container. It will go till a given width
-        and center content
-    </div>
-    <hr />
-
-    <h2 class="link">@Links</h2>
-    <a class="link link-primary" href="/">Primary Link</a>
-    <a class="link link-secondary" href="/">Secondary Link</a>
-    <hr />
-
-    <h2 class="list">@Lists</h2>
-    <h3>Here's My List using ul & li(Unordered List)</h3>
-    <ul>
-        <li class="list-non-bullet">Item One</li>
-        <li class="list-non-bullet">Item Two</li>
-        <li class="list-non-bullet">Item Three</li>
-    </ul>
-    <h3>Inline List</h3>
-    <p>
-        Instead of going into new row we will create a list which will take all
-        items into same row.
-    </p>
-    <ul>
-        <li class="list-inline">Inline Item One</li>
-        <li class="list-inline">Inline Item Two</li>
-        <li class="list-inline">Inline Item Three</li>
-    </ul>
-    <h3>Reverse Ordered Lists</h3>
-    <p>This list will count items in reverse</p>
-    <ol reversed>
-        <li>First Item</li>
-        <li>Second Item</li>
-        <li>Third Item</li>
-    </ol>
-    <hr />
-
-    <h2>@Nav</h2>
     <div class="nav">
-        <p class="nav-brand">I Am Brand-Name</p>
+        <p class="nav-brand">Kushagradheer Srivastava</p>
         <ul class="  nav-pills list-non-bullet">
             <li class="list-inline "><a class="nav-link-active" href="/">Home</a></li>
-            <li class=" list-inline "><a class="nav-link" href="/">Products</a></li>
-            <li class="list-inline "><a class="nav-link" href="/">About</a></li>
+            <li class=" list-inline "><a class="nav-link" href="/">Projects</a></li>
+            <li class="list-inline "><a class="nav-link" href="/">Blogs</a></li>
         </ul>
     </div>
-    <hr />
 
-    <h2>@Header</h2>
     <header class="hero">
         <img class="hero-img" src="images/resume.svg" />
         <h1 class="hero-heading center-container">Kushagra the <span class="hero-span">Web Developer</span></h1>
-    </header>
-    <hr />
-
-    <h2>@Section</h2>
-    <p>
-        A section is used to separate parts of pages. In marketing websites you
-        would have seen a header followed by sections of features, team, pricing,
-        contact info etc.
-    </p>
+    </header>   
+    
     <section class="sections">
-        <h1>White Section</h1>
-        <p>This will have white background</p>
-        <h1 class="sections-offwhite">Off-White Section</h1>
-        <p>This will have light blue background</p>
-    </section>
-    <hr />
-
-    <h3>@Footer</h3>
-    <div class="footer">
-        <p class="footer-heading">Header Inside Footer</p>
-        <ul class=" list-non-bullet">
-
-            <li class="list-inline"><a class="footer-text" href="/">SocialSiteOne</a></li>
-
-            <li class="list-inline"><a class="footer-text" href="/">SocialSiteTwo</a></li>
-
-            <li class="list-inline"><a class="footer-text" href="/">SocialSiteThree</a></li>
+        <div class="container center-container">
+        <h1>Technologies</h1>
+        <p>I'm familiar with HTML5,CSS,Git,JavaScript,ReactJS,NodeJS,Web Hosting and Flutter</p>
     </div>
+    </section>
 
-    <hr>
+    <section class="sections">
+        <div class="container center-container">
+            <h1>Projects</h1>
+            <p>I like to showcase my work and thus, you can see my projects hosted online</p>
+            <div class="container center-container">
+            <a class="  link link-primary" href="/">Click here to see my projects</a>
+        </div>
+        </div>
+    </section>
+
+    <section class="sections">
+        <div class="container center-container">
+            <h1>Blogs</h1>
+            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
+            <div class="container center-container">
+            <a class="  link link-secondary" href="/">Click here to see my projects</a>
+        </div>
+        </div>
+    </section>
+    
 </body>
-
 </html>
