added project section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <p class="nav-brand">Kushagradheer Srivastava</p>
         <ul class="  nav-pills list-non-bullet">
             <li class="list-inline "><a class="nav-link-active" href="/">Home</a></li>
-            <li class=" list-inline "><a class="nav-link" href="/">Projects</a></li>
-            <li class="list-inline "><a class="nav-link" href="/">Blogs</a></li>
+            <li class=" list-inline "><a class="nav-link" href="projects.html">Projects</a></li>
+            <li class="list-inline "><a class="nav-link" href="blogs.html">Blogs</a></li>
         </ul>
     </div>
 
@@ -36,7 +36,7 @@
             <h1>Projects</h1>
             <p>I like to showcase my work and thus, you can see my projects hosted online</p>
             <div class="container center-container">
-            <a class="  link link-primary" href="/">Click here to see my projects</a>
+            <a class="  link link-primary" href="projects.html">Click here to see my projects</a>
         </div>
         </div>
     </section>
@@ -46,10 +46,22 @@
             <h1>Blogs</h1>
             <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
             <div class="container center-container">
-            <a class="  link link-secondary" href="/">Click here to see my projects</a>
+            <a class="  link link-secondary" href="blogs.html">Click here to see my projects</a>
         </div>
         </div>
     </section>
+
+    <div class="footer">
+        <p class="footer-heading">Connect with me on</p>
+        <ul class="footer-text list-non-bullet">
+
+            <li class="list-inline"><a class="footer-links" href="/">Linkedin</a></li>
+
+            <li class="list-inline"><a class="footer-links" href="/">Github</a></li>
+
+            <li class="list-inline"><a class="footer-links" href="/">Instagram</a></li>
+    </div>
+
     
 </body>
 </html>
